--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 @import "tailwindcss";
 @plugin "daisyui" {
   themes: light --default;
 };
+
 * {
-    font-family: "Lora", serif;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
 }
 
 
@@ -20,7 +23,7 @@ a.active{
  color: crimson;
   border: 1px solid #CAC8C8FF;
   border-radius: 20px;
-  padding: 4px;
+  padding: 6px;
   background: rgb(243, 226, 226);
 }
 
@@ -28,7 +31,7 @@ a.active{
   background: rgba(255, 255, 255, 0.14);
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
-  border-radius: 20px;
+  border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   /* overflow: hidden; */
 }
